--- a/Assets/index-base.html
+++ b/Assets/index-base.html
@@ -3,6 +3,9 @@
     <head>
         <title>Gallery</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200;300;400;500;600;700&family=Vina+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -11,27 +14,27 @@
 		<main>
 			<article>
 				<h2>Andrea</h2>
-				<img src="" alt="Andrea">
+				<img src="/Assets/kid1.png" alt="Andrea" width= 100 height=100>
 			</article>
 			<article>
 				<h2>Nuria</h2>
-				<img src="" alt="Nuria">
+				<img src="/Assets/kid2.png" alt="Nuria" width= 100 height=100>
 			</article>
 			<article>
 				<h2>Hugo</h2>
-				<img src="" alt="Hugo">
+				<img src="/Assets/kid3.png" alt="Hugo" width= 100 height=100>
 			</article>
 			<article>
 				<h2>Miguel</h2>
-				<img src="" alt="Miguel">
+				<img src="/Assets/kid4.png" alt="Miguel" width= 100 height=100>
 			</article>
 			<article>
 				<h2>Mariña</h2>
-				<img src="" alt="Mariña">
+				<img src="/Assets/kid5.png" alt="Mariña" width= 100 height=100>
 			</article>
 			<article>
 				<h2>Ernesto</h2>
-				<img src="" alt="Ernesto">
+				<img src="/Assets/kid6.png" alt="Ernesto" width= 100 height=100>
 			</article>
 		</main>
 		<footer>
